# sphero_sprk_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: sphero_addresses.txt
launch/: drivers.launch  drivers_launch.sh  manual_ctrl_launch.sh  one_sphero.launch
src/: SpheroDict.py  man_control.py  sphero_driver.py  sphero_node.py  util.py
