<?xml version="1.0"?>
<package format="2">
  <name>sphero_sprk_ros</name>
  <version>1.0.0</version>
  <description>The sphero_sprk_ros package provides drivers and ros wrappers for controlling the Sphero SPRK+ robots.</description>

  <author email="antonella.barisic@fer.hr">Antonella Barisic</author>
  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>
  <maintainer email="antonella.barisic@fer.hr">Antonella Barisic</maintainer>
  <url type="repository">https://github.com/antonellabarisic/sphero_sprk_ros</url>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
